# chip8

./: .gitmodules  CMakeLists.txt  README.md  SETUP.md
hw/: CMakeLists.txt  Makefile  chip_ram.sv  chip_ram_test.cpp  cpu.sv  cpu_test.cpp  display.sv  display_ram.sv  hw_test.cpp  hw_test.hpp  main.cpp  mymodule.sv  mymodule_test.cpp  timer.sv  yachip8.sv
hw/quartus/: soc_system.qpf  soc_system.qsf
hw/quartus/db/: soc_system.db_info
keyboard/: CMakeLists.txt  Makefile  keeb.txt  keyboard.cpp  keyboard.hpp  keyboard_interface.cpp  keyboard_test.cpp  lab2.c  menu  menu.cpp  note.txt
keyboard_tested/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  keyboard.cpp  keyboard_test.cpp
menu/: CMakeCache.txt  CMakeLists.txt  Makefile  chip8.c  chip8.h  chip8_start.cpp  cmake_install.cmake  fbputchar.h  fpga_ram.c  fpga_ram.h  keyboard.cpp  keyboard.hpp  keyboard_test  menu  menu.cpp
menu/roms/: cave.hex  pong.hex  space_invaders.hex  start.hex
roms/: soccer.hex  tetris.hex
sw/: CMakeLists.txt  keyboard.hpp  keyboard_test.cpp
swimp/: '  CMakeLists.txt  README.txt  fb_v2.sv  font.cpp  font.hpp  main.cpp  statemachine.cpp  statemachine.hpp  vga_ball.sv  vga_colorbar_top.v  vga_driver.v
swimp/fb_v2/: character_sprites.sv  vga_ball.sv
swimp/framebuffer_v1/: PLL_48MHz_to_25MHz.v  RAM.v  README.txt  top_tb.v  vga_display.v
swproto/: CMakeLists.txt  README.txt  emulator.cpp  font.cpp  main.cpp  statemachine.cpp  statemachine.hpp  statemachine_test.cpp
