cmake_minimum_required(VERSION 3.5)
project(chip-8)
set(CMAKE_CXX_STANDARD 11)
add_executable(chip8 chip8_start.cpp keyboard.cpp keyboard.hpp chip8.c chip8.h)
set_property(TARGET chip8 PROPERTY CXX_STANDARD 20)
set_property(TARGET chip8 PROPERTY CXX_STANDARD_REQUIRED ON)
target_link_libraries(chip8 usb-1.0)
